--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Frontend for Gnucash reporting",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -14,15 +14,12 @@
   "license": "ISC",
   "devDependencies": {
     "html-webpack-plugin": "^2.28.0",
-    "webpack": "^2.6.1",
+    "moment": "^2.18.1",
     "nvd3": "^1.8.5",
-    "moment": "^2.18.1"
+    "webpack": "^2.6.1"
   },
   "dependencies": {
     "nvd3": "^1.8.5",
     "d3-3": "^0.0.0"
-  },
-  "scripts": {
-    "build": "webpack"
   }
 }
